[package]
name = "clicker-game"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
rand = "0.9.2"
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
 
